--- a/apps/dashboard/src/app/entities/entity-dialog/group-select/group-select.component.scss
+++ b/apps/dashboard/src/app/entities/entity-dialog/group-select/group-select.component.scss
@@ -1,31 +1,32 @@
 @import 'variables';
 @import '../../tokens';
 
-$option-height: 40px;
+$option-height: rhythm(5);
 
 .group-select {
   @include reset-button();
-  position: relative;
-  display: inline-flex;
   align-items: center;
-  min-width: 180px;
-  max-width: 240px;
-  height: 40px;
-  padding: 0 16px 0 26px;
-  background-color: var(--stf-gray-background);
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px;
-  box-shadow: var(--stf-shadow-button) rgba(0, 0, 0, 0.16);
+  background-color: $color-neutral-lightest;
+  border-top-right-radius: rhythm(0.5);
+  border-bottom-right-radius: rhythm(0.5);
+  box-shadow: var(--stf-shadow-button) rgba($color-dark-stronger, 0.16);
+  display: inline-flex;
+  height: rhythm(5);
+  min-width: rhythm(22);
+  max-width: rhythm(32);
+  padding: 0 rhythm(2) 0 rhythm(3);
+  position: relative;
+
   &:not(:disabled) {
     cursor: pointer;
-    padding-right: 36px;
+    padding-right: rhythm(4);
   }
   &-color {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
-    width: 10px;
+    width: rhythm(1.5);
     background-color: $entity-fallback-color;
   }
   &-title {
@@ -33,12 +34,9 @@ $option-height: 40px;
   }
   &-arrow {
     position: absolute;
-    top: 11px;
-    right: 12px;
-    svg {
-      width: 12px;
-      height: auto;
-    }
+    right: rhythm(1.5);
+    top: 50%;
+    transform: translateY(-50%);
   }
 }
 
@@ -52,23 +50,23 @@ $option-height: 40px;
 
 .option {
   @include reset-button();
+  align-items: center;
+  background-color: $color-light-stronger;
+  cursor: pointer;
+  display: flex;
+  height: $option-height;
+  padding: 0 rhythm(2) 0 rhythm(3);
   position: relative;
   width: 100%;
-  display: flex;
-  align-items: center;
-  height: $option-height;
-  padding: 0 16px 0 26px;
-  background-color: #fff;
-  cursor: pointer;
   &:hover {
-    background-color: var(--stf-gray-background);
+    background-color: $color-neutral-lightest;
   }
   &-color {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
-    width: 10px;
+    width: rhythm(1.5);
     background-color: $entity-fallback-color;
   }
   &-title {
