--- a/apps/dashboard/src/app/entities/entity-group/entity-group.component.html
+++ b/apps/dashboard/src/app/entities/entity-group/entity-group.component.html
@@ -1,55 +1,52 @@
-<div
-  class="entity-group"
-  [class.expanded]="expanded"
-  [class.disabled]="editMode"
-  [attr.role]="'button'"
-  [attr.aria-disabled]="editMode ? 'true' : null"
-  [attr.tabindex]="editMode ? '-1' : '0'"
-  [attr.aria-expanded]="expanded"
-  (click)="editMode ? null : toggleExpanded($event)"
+<div class="entity-group"
+     [class.expanded]="expanded"
+     [class.disabled]="editMode"
+     [attr.role]="'button'"
+     [attr.aria-disabled]="editMode ? 'true' : null"
+     [attr.tabindex]="editMode ? '-1' : '0'"
+     [attr.aria-expanded]="expanded"
+     (click)="editMode ? null : toggleExpanded($event)"
 >
   <div class="entity-group-cell cell-color">
     <div class="color-border" [style.background-color]="group?.color || colors[this.group?.key]"></div>
   </div>
   <div class="entity-group-cell cell-name">
-    <svg-icon src="assets/icons/chevron-right.svg"></svg-icon>
+    <pa-icon name="chevron-right" size="small"></pa-icon>
     <span>{{ group?.title || ('resource.entities.' + this.group?.key.toLowerCase() | translate) }}</span>
   </div>
   <div class="entity-group-cell cell-synonyms"></div>
   <div class="entity-group-cell cell-description"></div>
   <div class="entity-group-cell cell-presence"></div>
   <div class="entity-group-cell cell-actions">
-    <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="10px">
+    <div fxLayout="row" fxLayoutAlign="end center" fxLayoutGap="8px">
       <ng-container *ngIf="!editMode && (isAdminOrContrib | async)">
-        <app-button-action (click)="toggleEditMode()" *ngIf="!editMode" action="edit" ariaLabel="generic.edit">
-        </app-button-action>
-        <app-button-action
-          (click)="addEntity()"
-          action="add_many"
-          ariaLabel="generic.add"
-          stfTooltip
-          stfTooltipText="entity.new_entity"
-        >
-        </app-button-action>
-        <app-button-action (click)="deleteGroup()" action="delete" ariaLabel="generic.delete"> </app-button-action>
+        <pa-button icon="edit"
+                   aspect="basic"
+                   size="small"
+                   paTooltip="generic.edit"
+                   (click)="toggleEditMode()">{{'generic.edit' | translate}}</pa-button>
+        <pa-button icon="add-file"
+                   aspect="basic"
+                   size="small"
+                   paTooltip="entity.new_entity"
+                   (click)="addEntity()">{{'entity.new_entity' | translate}}</pa-button>
+        <pa-button icon="trash"
+                   aspect="basic"
+                   size="small"
+                   paTooltip="generic.delete"
+                   (click)="deleteGroup()">{{'generic.delete' | translate}}</pa-button>
       </ng-container>
       <ng-container *ngIf="editMode">
-        <app-button-action
-          (click)="saveGroup()"
-          action="save"
-          ariaLabel="generic.save"
-          stfTooltip
-          stfTooltipText="entity.save_changes"
-        >
-        </app-button-action>
-        <app-button-action
-          (click)="toggleEditMode()"
-          action="close"
-          ariaLabel="generic.cancel"
-          stfTooltip
-          stfTooltipText="generic.cancel"
-        >
-        </app-button-action>
+        <pa-button icon="check"
+                   aspect="basic"
+                   size="small"
+                   paTooltip="entity.save_changes"
+                   (click)="saveGroup()">{{'entity.save_changes' | translate}}</pa-button>
+        <pa-button icon="cross"
+                   aspect="basic"
+                   size="small"
+                   paTooltip="generic.cancel"
+                   (click)="toggleEditMode()">{{'generic.cancel' | translate}}</pa-button>
       </ng-container>
     </div>
   </div>
@@ -57,13 +54,11 @@
 <stf-expander [expanded]="expanded" [contentLoaded]="updateExpander">
   <stf-expander-content>
     <div *ngIf="expanded">
-      <app-entity-list
-        [group]="group"
-        [editMode]="editMode"
-        [searchTerm]="searchTerm"
-        [searchResults]="searchResults$ | async"
-      >
-      </app-entity-list>
+      <app-entity-list [group]="group"
+                       [editMode]="editMode"
+                       [searchTerm]="searchTerm"
+                       [searchResults]="searchResults$ | async"
+      ></app-entity-list>
     </div>
   </stf-expander-content>
 </stf-expander>
