--- a/apps/dashboard/src/app/entities/entity-list/entity-list.component.html
+++ b/apps/dashboard/src/app/entities/entity-list/entity-list.component.html
@@ -1,5 +1,8 @@
-<div class="entity-list" cdkDropListGroup *ngIf="filteredEntities() as entities">
-  <div class="entity-list-empty" *ngIf="searchResults && entities.length === 0">
+<div *ngIf="filteredEntities() as entities"
+     class="entity-list"
+     cdkDropListGroup>
+  <div *ngIf="searchResults && entities.length === 0"
+       class="entity-list-empty">
     <div class="entity-list-item">
       <div class="entity-list-item-cell cell-color">
         <div class="color-border"></div>
@@ -12,71 +15,62 @@
     </div>
   </div>
 
-  <cdk-virtual-scroll-viewport
-    class="entity-list-virtual"
-    [itemSize]="entityHeight"
-    #virtualContainer
-    [style.height.px]="getListHeight()"
+  <cdk-virtual-scroll-viewport class="entity-list-virtual"
+                               [itemSize]="entityHeight"
+                               #virtualContainer
+                               [style.height.px]="getListHeight()"
   >
     <ng-container *cdkVirtualFor="let entity of entities">
-      <div
-        class="entity-list-item"
-        [class.highlighted]="isHighlighted(entity)"
-        cdkDropList
-        (cdkDropListDropped)="dragDrop($event)"
-        [cdkDropListData]="entity"
-        (cdkDropListEntered)="dragEnter($event)"
-        (cdkDropListExited)="dragExit($event)"
-        [cdkDropListSortingDisabled]="true"
-        cdkDropListOrientation="horizontal"
+      <div class="entity-list-item"
+           [class.highlighted]="isHighlighted(entity)"
+           cdkDropList
+           (cdkDropListDropped)="dragDrop($event)"
+           [cdkDropListData]="entity"
+           (cdkDropListEntered)="dragEnter($event)"
+           (cdkDropListExited)="dragExit($event)"
+           [cdkDropListSortingDisabled]="true"
+           cdkDropListOrientation="horizontal"
       >
         <div class="entity-list-item-cell cell-color">
           <div class="color-border"></div>
         </div>
         <div class="entity-list-item-cell cell-name">
-          <span class="drag" [class.active]="editMode" cdkDrag [cdkDragDisabled]="!editMode" [cdkDragData]="entity">
-            <app-entity-name [entity]="entity" [editMode]="editMode" [group]="group" (delete)="deleteEntity(entity)">
+          <span class="drag"
+                [class.active]="editMode"
+                cdkDrag
+                [cdkDragDisabled]="!editMode"
+                [cdkDragData]="entity">
+            <app-entity-name [entity]="entity"
+                             [editMode]="editMode"
+                             [group]="group"
+                             (delete)="deleteEntity(entity)">
             </app-entity-name>
-            <div class="empty-placeholder" *cdkDragPlaceholder></div>
+            <div *cdkDragPlaceholder
+                 class="empty-placeholder"></div>
           </span>
         </div>
         <div class="entity-list-item-cell cell-synonyms min-width-0">
-          <div fxLayout="row" fxLayoutGap="10px" class="min-width-0">
-            <app-synonym-add
-              *ngIf="editMode"
-              (add)="addSynonym(entity, $event)"
-              [entities]="entities"
-              [ignore]="[entity]"
+          <div fxLayout="row"
+               fxLayoutGap="10px"
+               class="min-width-0">
+            <app-synonym-add *ngIf="editMode"
+                             (add)="addSynonym(entity, $event)"
+                             [entities]="entities"
+                             [ignore]="[entity]"
             >
             </app-synonym-add>
-            <app-synonym-list
-              fxFlex="1 1 0"
-              class="min-width-0"
-              (unlink)="unlinkSynonym(entity, $event)"
-              (delete)="deleteEntity($event)"
-              [editMode]="editMode"
-              [synonyms]="entitiesGroup?.getSynonyms(entity.value) || []"
-              [group]="group"
+            <app-synonym-list fxFlex="1 1 0"
+                              class="min-width-0"
+                              (unlink)="unlinkSynonym(entity, $event)"
+                              (delete)="deleteEntity($event)"
+                              [editMode]="editMode"
+                              [synonyms]="entitiesGroup?.getSynonyms(entity.value) || []"
+                              [group]="group"
             >
             </app-synonym-list>
           </div>
         </div>
-        <div class="entity-list-item-cell cell-description">
-          <!--
-          <app-button-action
-            *ngIf="!editMode"
-            action="view"
-            (click)="viewEntity(entity)">
-          </app-button-action>
-          <app-button-action
-            *ngIf="editMode"
-            action="edit"
-            iconWidth="17px"
-            iconHeight="auto"
-            (click)="editEntity(entity)">
-          </app-button-action>
-          -->
-        </div>
+        <div class="entity-list-item-cell cell-description"></div>
         <div class="entity-list-item-cell cell-presence"></div>
         <div class="entity-list-item-cell cell-actions"></div>
       </div>
