--- a/apps/dashboard/src/app/entities/tokens.scss
+++ b/apps/dashboard/src/app/entities/tokens.scss
@@ -1,10 +1,11 @@
+@import "variables";
 // Entity table dimensions
 
-$entity-table-color-flex: 0 0 28px;
-$entity-table-name-flex: 0 0 275px;
-$entity-table-synonyms-flex: 1 0 112px;
-$entity-table-description-flex: 0 0 128px;
-$entity-table-presence-flex: 0 0 112px;
-$entity-table-actions-flex: 0 0 175px;
+$entity-table-color-flex: 0 0 rhythm(3);
+$entity-table-name-flex: 0 0 rhythm(32);
+$entity-table-synonyms-flex: 1 0 rhythm(32);
+$entity-table-description-flex: 0 0 rhythm(16);
+$entity-table-presence-flex: 0 0 rhythm(14);
+$entity-table-actions-flex: 0 0 rhythm(22);
 
-$entity-fallback-color: var(--stf-gray-lighter-3);
+$entity-fallback-color: $color-neutral-regular;
