--- a/apps/dashboard/src/app/components/search-filters/filter-ontology/filter-ontology.component.scss
+++ b/apps/dashboard/src/app/components/search-filters/filter-ontology/filter-ontology.component.scss
@@ -4,33 +4,29 @@
   &-button {
     @include reset-button();
     cursor: pointer;
-    margin-bottom: 8px;
+    margin-bottom: rhythm(1);
     &:last-child {
       margin-bottom: 0;
     }
-    svg-icon {
-      margin-right: 2px;
+    pa-icon {
+      margin-right: rhythm(0.25);
+      transition: transform $transition-response;
     }
-    svg {
-      display: block;
-      width: 14px;
-      height: auto;
-      transition: 0.2s transform;
-    }
+
     &.open {
-      svg {
+      pa-icon {
         transform: rotate(90deg);
       }
     }
   }
 
   &-counter {
-    margin: 2px 0 0 5px;
+    margin: rhythm(0.25) 0 0 rhythm(0.5);
     font-size: var(--stf-font-size-ssmall);
     font-weight: var(--stf-font-weight-light);
   }
 
   &-list {
-    padding: 0 0 12px 18px;
+    padding: 0 0 rhythm(1.5) rhythm(2);
   }
 }
