--- a/apps/dashboard/src/app/ontologies/ontology/label/label.component.html
+++ b/apps/dashboard/src/app/ontologies/ontology/label/label.component.html
@@ -3,8 +3,18 @@
     <div class="label-title">{{ label.title }}</div>
   </div>
   <div class="label-actions">
-    <app-button-action (click)="edit()" action="edit" ariaLabel="generic.edit"> </app-button-action>
-    <app-button-action (click)="delete()" action="delete" ariaLabel="generic.delete"> </app-button-action>
+    <pa-button aspect="basic"
+               size="small"
+               icon="edit"
+               iconSize="small"
+               paTooltip="generic.edit"
+               (click)="edit()">{{'generic.edit' | translate}}</pa-button>
+    <pa-button aspect="basic"
+               size="small"
+               icon="trash"
+               iconSize="small"
+               paTooltip="generic.delete"
+               (click)="delete()">{{'generic.delete' | translate}}</pa-button>
   </div>
 </div>
 
@@ -25,13 +35,18 @@
     />
   </div>
   <div class="label-actions">
-    <app-button-action
-      (click)="save()"
-      action="save"
-      [disabled]="title.invalid || title.value === label?.title"
-      ariaLabel="generic.save"
-    >
-    </app-button-action>
-    <app-button-action (click)="close()" action="close" ariaLabel="generic.close"> </app-button-action>
+    <pa-button aspect="basic"
+               size="small"
+               icon="check"
+               iconSize="small"
+               paTooltip="generic.save"
+               [disabled]="title.invalid || title.value === label?.title"
+               (click)="save()">{{'generic.save' | translate}}</pa-button>
+    <pa-button aspect="basic"
+               size="small"
+               icon="cross"
+               iconSize="small"
+               paTooltip="generic.close"
+               (click)="close()">{{'generic.close' | translate}}</pa-button>
   </div>
 </div>
