Fix [sc-2107]: prevent removing the last user of a KB
Disable delete button on:
- the only user left for this kb
- the only owner of the KB (we can delete an owner of a KB only if there is another owner on the kb)

Disabled select role of a user when:
- the user is not an account manager
- the user is an account manager but the user is the only owner of the kb

--- a/apps/dashboard/src/app/account/account-users/account-users.component.html
+++ b/apps/dashboard/src/app/account/account-users/account-users.component.html
@@ -31,7 +31,7 @@
         {{ 'generic.user' | translate }}
       </th>
       <td mat-cell *matCellDef="let user">
-        {{ user.name }}
+        {{ user.name }} – {{ user.email }}
       </td>
     </ng-container>
 
