--- a/apps/manager/src/styles.scss
+++ b/apps/manager/src/styles.scss
@@ -1,3 +1,6 @@
+@import 'libs/sistema/theme/fonts';
+@import 'libs/pastanaga-angular/projects/pastanaga-angular/src/styles/core';
+
 /* You can add global styles to this file, and also import other style files */
 @import 'libs/pastanaga/src/lib/styles/once';
 @import 'libs/pastanaga/src/lib/styles/fonts';
