Replace simple-select by dropdown-button in resource list
- Create new dropdown-button standalone component in sistema
- use dropdown-button in label-field, kb-process and resource list
- Remove STF-simple-select component and module

--- a/apps/dashboard/src/app/components/label/label-field/label-field.component.html
+++ b/apps/dashboard/src/app/components/label/label-field/label-field.component.html
@@ -3,11 +3,8 @@
      *ngIf="hasLabels | async"
      class="label-field">
   <div class="label-selector">
-    <pa-button class="label-selection-button"
-               [paPopup]="labelSelection">
-      {{ 'generic.select_tags' | translate }}
-      <pa-icon [name]="open ? 'chevron-up' : 'chevron-down'"></pa-icon>
-    </pa-button>
+    <nsi-dropdown-button [popupRef]="labelSelection"
+                         [open]="open">{{ 'generic.select_tags' | translate }}</nsi-dropdown-button>
 
     <pa-dropdown #labelSelection
                  dontAdjustPosition
