--- a/libs/common/src/lib/user/login/login.component.html
+++ b/libs/common/src/lib/user/login/login.component.html
@@ -81,22 +81,12 @@
             <div class="login_google"
                  fxLayout="row"
                  fxLayoutAlign="center center"
-                 fxLayoutGap="10px">
-              <svg-icon src="assets/icons/google.svg"></svg-icon>
+                 fxLayoutGap="12px">
+              <pa-icon path="assets/icons/google.svg"></pa-icon>
               <span>{{ 'login.continue_with' | translate }} <strong>Google</strong></span>
             </div>
           </button>
         </div>
-        <!--
-        <div>
-          <stf-button color="basic" weight="regular" [fullWidth]="true" size="large">
-            <div fxLayout="row" fxLayoutAlign="center center" fxLayoutGap="10px">
-              <svg-icon src="assets/icons/github.svg"></svg-icon>
-              <span>{{ 'login.continue_with' | translate }} <strong>GitHub</strong></span>
-            </div>
-          </stf-button>
-        </div>
-        -->
       </div>
       <div class="login_signup">
         <span>{{ 'login.have_account' | translate }} </span>
