Adapt Pastanaga confirmation dialog for Sistema

--- a/apps/sistema-demo/src/app/sistema-pages/sistema-toasts/sistema-toast.component.html
+++ b/apps/sistema-demo/src/app/sistema-pages/sistema-toasts/sistema-toast.component.html
@@ -1,7 +1,8 @@
 <pa-demo-page>
   <pa-demo-title>Toast</pa-demo-title>
   <pa-demo-description>
-    <p>Sistema provides a system for displaying toast messages simply by calling <code>SisToastService</code>. This service is based on Pastanaga <code>ToastService</code>.</p>
+    <p>Sistema provides a system for displaying toast messages simply by calling <code>SisToastService</code>.
+      This service is based on Pastanaga <a href="https://plone.github.io/pastanaga-angular/toast" target="_blank">ToastService</a>.</p>
     <p>Sistema toasts are displayed with a title, an icon on the left, and a close button on the right. The title and icon depends on the toast type:</p>
     <ul>
       <li><strong>info</strong>: neutral toast with "Information" title and an info icon. Closing automatically after 5 seconds.</li>
