--- a/libs/sistema/theme/_pastanaga-core-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-core-overrides.scss
@@ -11,3 +11,5 @@ overrides for:
 @import "tokens/spacing.tokens";
 @import "tokens/typography.tokens";
 @import "tokens/scrollbar.tokens";
+
+$z-index-modal-backdrop: 2000;
