Prevent console.error in common tests

--- a/libs/common/src/lib/user/profile/profile.component.html
+++ b/libs/common/src/lib/user/profile/profile.component.html
@@ -82,10 +82,10 @@
       </div>
 
       <div class="actions">
-        <stf-button minWidth="140px"
-                    (click)="save()">
+        <pa-button kind="primary"
+                   (click)="save()">
           {{ 'generic.save' | translate }}
-        </stf-button>
+        </pa-button>
       </div>
     </form>
   </div>
